--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 requests==2.31.0
 pandas==2.1.3
 python-dateutil==2.8.2
-numpy==1.26.4 
+numpy==1.26.4
+discord.py==2.3.2
+python-dotenv==1.0.0
+PyYAML==6.0.1
