--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-requests==2.31.0
-pandas==2.1.3
-python-dateutil==2.8.2
-numpy==1.26.4
-discord.py==2.3.2
-python-dotenv==1.0.0
-PyYAML==6.0.1
+requests>=2.26.0
+pandas>=1.5.0
+numpy>=1.21.0
+yfinance>=0.2.0
+python-dotenv>=0.19.0
+xrpl-py>=2.0.0
+loguru>=0.6.0
+brotli>=1.0.9
+cryptography>=3.4.7
