--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ xrpl-py>=2.0.0
 loguru>=0.6.0
 brotli>=1.0.9
 cryptography>=3.4.7
+google-api-python-client>=2.0.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=0.4.6
